<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Countly Demo App</string>
  <string name="deep_link">Deep Link Test</string>
  <string name="countly_hannel_name">General Notifications</string>
  <string name="countly_channel_description"><![CDATA[News & announcements]]></string>
  <string name="title_activity_another">AnotherActivity</string>
  <string name="another_activity_text">Another Activity</string>

  <string name="activity_name_apm">APM examples</string>
  <string name="activity_name_crash_reporting">Crash reporting examples</string>
  <string name="activity_name_custom_events">Custom events examples</string>
  <string name="activity_name_multithreading">Multithreading examples</string>
  <string name="activity_name_others">Other examples</string>
  <string name="activity_name_user_detail">User detail examples</string>
  <string name="activity_name_view_tracking">View tracking examples</string>
  <string name="activity_name_remote_config">Remote Config examples</string>
  <string name="activity_name_device_id">Device ID examples</string>
  <string name="custom_events">Custom Events</string>
  <string name="crash_reporting">Crash Reporting</string>
  <string name="user_details">User Details</string>
  <string name="apm">APM</string>
  <string name="view_tracking">View Tracking</string>
  <string name="multi_threading">Multi Threading</string>
  <string name="others">Others</string>
  <string name="unrecognized_selector">unrecognized selector</string>
  <string name="out_of_bounds">out of bounds</string>
  <string name="null_pointer">NULL pointer</string>
  <string name="invalid_geometry">invalid geometry</string>
  <string name="assert_fail">assert fail</string>
  <string name="kill">kill</string>
  <string name="custom_crash_log">Divzero with breadcrumbs</string>
  <string name="record_handled_exception">record handled exception</string>
  <string name="unhandled_exception">Unhandled exception</string>
  <string name="deep_unhandled_exception">Deep Unhandled exception</string>
  <string name="deep_handled_exception">Deep Handled exception</string>
  <string name="record_event">Record Event</string>
  <string name="record_event_with_count">record event with count</string>
  <string name="record_event_with_sum">record event with sum</string>
  <string name="record_event_with_duration">record event with duration</string>
  <string name="record_event_with_segm">record event with segm.</string>
  <string name="record_event_with_segm_count">record event with segm., count</string>
  <string name="record_event_with_segm_count_sum">record event with segm., count, sum</string>
  <string name="record_event_with_segm_count_sum_dur">record event with segm., count, sum, dur.</string>
  <string name="start_event">start timed event</string>
  <string name="end_event">end timed event</string>
  <string name="end_event_with_segm_count_sum">end event with segm., count, sum</string>
  <string name="set_custom_header_field_value">set custom header field value</string>
  <string name="ask_for_star_rating">ask for star-rating</string>
  <string name="ask_for_rating_widget">ask for rating widget</string>
  <string name="set_new_device_id">set new device id</string>
  <string name="set_new_device_id_with_server_merge">set new device id with server merge</string>
  <string name="record_user_details">record user details</string>
  <string name="custom_modifiers_1">custom modifiers 1</string>
  <string name="custom_modifiers_2">custom modifiers 2</string>
  <string name="user_logged_in">user logged in</string>
  <string name="user_logged_out">user logged out</string>
  <string name="turn_off_auto">turn off auto</string>
  <string name="turn_on_auto">turn on auto</string>
  <string name="present_modal">present modal</string>
  <string name="navigation_controller_push_pop">navigation controller push / pop</string>
  <string name="add_exception">add exception</string>
  <string name="remove_exception">remove exception</string>
  <string name="manual_report">manual report</string>
  <string name="add_a_breadcrumb">Add a breadcrumb</string>
  <string name="activity_name_feedback">Feedback examples</string>
  <string name="activity_name_content_zone">Content Zone</string>
  <string name="content_zone_device_id">Device ID</string>
  <string name="activity_name_consent">Consent Management</string>
  <string name="activity_name_location">Location</string>
  <string name="activity_name_sessions">Sessions</string>
  <string name="activity_name_multi_instance">Multiple Instances</string>
</resources>
