<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin" >

    <Button
        android:text="@string/turn_off_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button34"/>

    <Button
        android:text="@string/turn_on_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button35"/>

    <Button
        android:text="@string/present_modal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button36"
        android:enabled="false"/>

    <Button
        android:text="@string/navigation_controller_push_pop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button37"
        android:enabled="false"/>

    <Button
        android:text="@string/add_exception"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button38"
        android:enabled="false"/>

    <Button
        android:text="@string/remove_exception"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button39"
        android:enabled="false"/>

    <Button
        android:text="@string/manual_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button40"/>
</LinearLayout>